--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 requests==2.22.0
 pydantic==2.9.2
 scikit-learn==1.5.2
+langchain-community~=0.3.7
+python-dotenv~=1.0.1
+openai~=1.54.4
+tiktoken~=0.8.0
+beautifulsoup4~=4.12.3
+PyPDF2~=3.0.1
