--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
-requests==2.22.0
+requests==2.26.0
 pydantic==2.9.2
 scikit-learn==1.5.2
-langchain-community~=0.3.7
 python-dotenv~=1.0.1
 openai~=1.54.4
 tiktoken~=0.8.0
 beautifulsoup4~=4.12.3
 PyPDF2~=3.0.1
+fastapi==0.115.5
+uvicorn==0.32.0
+openai==1.54.4
+langchain==0.3.4
+langchain-openai==0.2.3
+langchain-community==0.3.3
+pyowm==3.3.0
+langchain-experimental==0.3.2
+beautifulsoup4==4.12.3
